--- a/templates/index.html
+++ b/templates/index.html
@@ -55,20 +55,20 @@
                 <label for="mortgageSelect" class="form-label fs-2">Select Mortgage:</label>
                 <select class="form-select" id="mortgageSelect" onchange="displaySelectedMortgage()">
                     <option class="s-4" value="" selected style="font-size: 20px;">Select a mortgage</option>
-
                     {% for mortgage in mortgage_details %}
-                        <option class="fs-2" value="{{ mortgage.mortgage_name | replace(' ', '_') }}">{{ mortgage.mortgage_name }}</option>
+                        <option class="fs-4" value="{{ mortgage.mortgage_name | replace(' ', '_') }}">{{ mortgage.mortgage_name }}</option>
                     {% endfor %}
                 </select>
             </div>
 
-            <!-- mortgage details -->
+           <!-- mortgage details -->
             {% for mortgage in mortgage_details %}
-                <div class="card mb-3 mortgage-details" id="mortgage-{{ mortgage.mortgage_name | replace(' ', '_') }}" style="display:none;">
-                    <div class="card-body">
-                        <h5 class="card-title fs-2">{{ mortgage.mortgage_name }}</h5>
+            <div class="card mb-3 mortgage-details" id="mortgage-{{ mortgage.mortgage_name | replace(' ', '_') }}" style="display:none;">
+                <div class="card-body">
+                    <h3 class="text-center pb-5">Mortgage Name: <span class="card-title fs-2 text-center">{{ mortgage.mortgage_name }}</span></h3>
 
-                        <div class="mt-3 d-flex justify-content-end">
+                    <div class="row">
+                         <div class="mt-3 d-flex justify-content-end">
                             <div>
                                 <a href="{{ url_for('update_mortgage', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary btn-lg btn-block">Update Mortgage</a>
                             </div>
@@ -77,97 +77,140 @@
                                     {% if csrf_token %}
                                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                     {% endif %}
-                                    <button type="submit" class="btn btn-danger btn-lg btn-block">Remove Mortgage</button>
+                                    <button type="submit" class="btn btn-danger btn-lg btn-block ">Remove Mortgage</button>
+                                    <br><br><br><br>
                                 </form>
                             </div>
                         </div>
-
                         <!-- initial payment -->
-                        <h5 class="text-center fs-1">Initial Payment Breakdown</h5>
-                        <div class="table-responsive full-screen-table">
-                            <table class="table table-striped table-bordered table-hover">
-                                <thead class="table-dark">
-                                    <tr>
-                                        <th>Initial Breakdown</th>
-                                        <th>Value</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td><strong>Mortgage Name</strong></td>
-                                        <td><strong>{{ mortgage.mortgage_name }}</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Initial Principal</strong></td>
-                                        <td><strong>${{ "{:,.2f}".format(mortgage.initial_principal) }}</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Initial Interest</strong></td>
-                                        <td><strong>{{ mortgage.initial_interest }}%</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Initial Term</strong></td>
-                                        <td><strong>{{ mortgage.initial_term }} years</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Initial Deposit</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.deposit) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Initial Extra Costs</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.extra_costs) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Total Amount Borrowed</strong></td>
-                                        <td><strong>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['total_amount_borrowed']) }}</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Monthly Estimated Repayment</strong></td>
-                                        <td><strong>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['estimated_repayment_monthly']) }}</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Monthly Interest</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_interest_monthly']) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Monthly Principal</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_principal_monthly']) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Monthly Extra</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_extra_monthly']) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Monthly Total Repayment</strong></td>
-                                        <td><strong>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['total_repayment_monthly']) }}</strong></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Fortnightly Estimated Repayment</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['estimated_repayment_fortnightly']) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Fortnightly Interest</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_interest_fortnightly']) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Fortnightly Principal</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_principal_fortnightly']) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Fortnightly Extra</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_extra_fortnightly']) }}</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Fortnightly Total Repayment</td>
-                                        <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['total_repayment_fortnightly']) }}</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                        <div class="col-md-4">
+                            <h5 class="text-center fs-4">Initial Payment Breakdown</h5>
+                            <div class="table-responsive full-screen-table">
+                                <table class="table table-striped table-bordered table-hover">
+                                    <thead class="table-dark">
+                                        <tr>
+                                            <th>Initial Breakdown</th>
+                                            <th>Value</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Mortgage Name</td>
+                                            <td>{{ mortgage.mortgage_name }}</td>
+
+                                        </tr>
+                                        <tr>
+                                            <td>Initial Principal</td>
+                                            <td>${{ "{:,.2f}".format(mortgage.initial_principal) }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Initial Interest</td>
+                                            <td>{{ mortgage.initial_interest }}%</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Initial Term</strong></td>
+                                            <td>{{ mortgage.initial_term }} years</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Initial Deposit</td>
+                                            <td>${{ "{:,.2f}".format(mortgage.deposit) }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Initial Extra Costs</td>
+                                            <td>${{ "{:,.2f}".format(mortgage.extra_costs) }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Total Amount Borrowed</td>
+                                            <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['total_amount_borrowed']) }}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
 
-                        <!-- maturity Details - monthly -->
-                        <br><br><br>
-                        <h5 class="text-center fs-1">Mortgage Maturity Details - Monthly</h5>
+                <!-- monthly breakdown -->
+                <div class="col-md-4">
+                    <h5 class="text-center fs-4">Monthly Breakdown Details</h5>
+                    <div class="table-responsive full-screen-table">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th>Monthly Breakdown</th>
+                                    <th>Value</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>>Monthly Estimated Repayment</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['estimated_repayment_monthly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Monthly Interest</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_interest_monthly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Monthly Principal</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_principal_monthly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Monthly Extra</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_extra_monthly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Monthly Total Repayment</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['total_repayment_monthly']) }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <!-- fortnightly breakdown -->
+                <div class="col-md-4">
+                    <h5 class="text-center fs-4">Fortnightly Breakdown Details</h5>
+                    <div class="table-responsive full-screen-table">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th>Fortnightly Breakdown</th>
+                                    <th>Value</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Fortnightly Estimated Repayment</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['estimated_repayment_fortnightly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Fortnightly Interest</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_interest_fortnightly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Fortnightly Principal</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_principal_fortnightly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Fortnightly Extra</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['initial_extra_fortnightly']) }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Fortnightly Total Repayment</td>
+                                    <td>${{ "{:,.2f}".format(mortgage.initial_payment_breakdown['total_repayment_fortnightly']) }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <!-- maturity details -->
+            <div class="container">
+                <div class="row">
+                    <!-- monthly -->
+                    <div class="col-md-6">
+                        <h5 class="text-center fs-4">Mortgage Maturity Details - Monthly</h5>
                         <div class="table-responsive full-screen-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
@@ -202,16 +245,17 @@
                                         <td>${{ "{:,.2f}".format(mortgage.mortgage_maturity['monthly']['total_interest_saved']) }}</td>
                                     </tr>
                                     <tr>
-                                        <td>Months to Repay</td>
+                                        <td>Monthly to Repay</td>
                                         <td>{{ mortgage.mortgage_maturity['monthly']['months_to_repay'] }}</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
+                    </div>
 
-                        <!-- maturity fortnightly -->
-                        <br><br><br>
-                        <h5 class="text-center fs-1">Mortgage Maturity Details - Fortnightly</h5>
+                    <!-- fortnightly -->
+                    <div class="col-md-6">
+                        <h5 class="text-center fs-4">Mortgage Maturity Details - Fortnightly</h5>
                         <div class="table-responsive full-screen-table">
                             <table class="table table-striped table-bordered table-hover">
                                 <thead class="table-dark">
@@ -246,32 +290,34 @@
                                         <td>${{ "{:,.2f}".format(mortgage.mortgage_maturity['fortnightly']['total_interest_saved']) }}</td>
                                     </tr>
                                     <tr>
-                                        <td>Fortnights to Repay</td>
+                                        <td>Fortnightly to Repay</td>
                                         <td>{{ mortgage.mortgage_maturity['fortnightly']['fortnights_to_repay'] }}</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-
-                        <hr>
-                        <p class="card-text fs-1"><strong>Comments:</strong></p>
-                        {% for comment in mortgage.comments %}
-                            <p class="card-text fs-2">{{ comment }}</p>
-                        {% endfor %}
-                        <strong class="fs-2">Created At:</strong>
-                        <div class="fs-2">{{ mortgage.created_at.strftime('%B %d, %Y %I:%M %p') }}</div>
-
-                        <!-- amortization -->
-                        <br><br><br>
-
-                        <div class="text-center">
-                            <a href="{{ url_for('amortization_schedule', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary">View Amortization Schedule</a>
-                        </div>
-
-
                     </div>
                 </div>
+            </div>
+
+            <hr>
+            <p class="card-text fs-4"><strong>Comments:</strong></p>
+            {% for comment in mortgage.comments %}
+                <p class="card-text fs-2">{{ comment }}</p>
             {% endfor %}
+            <strong class="fs-4">Created At:</strong>
+            <div class="fs-2">{{ mortgage.created_at.strftime('%B %d, %Y %I:%M %p') }}</div>
+
+                    <!-- amortization -->
+                    <br><br><br>
+
+                    <div class="text-center">
+                        <a href="{{ url_for('amortization_schedule', mortgage_id=mortgage.mortgage_id) }}" class="btn btn-primary">View Amortization Schedule</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+
         </div>
     </div>
 
